# DealBot

./: .dockerignore  .env.example  .gitignore  ACTION_REQUIRED.md  AFFILIATE_TAG_UPDATE.md  API_KEYS_SETUP.md  APP_INSTALLATION_SUMMARY.md  AUTOMATED_TEST.md  CHECK_OLD_CREDENTIALS.md  CHECK_PAAPI_TOMORROW.sh  COMPREHENSIVE_FIX_REPORT.md  COMPREHENSIVE_TEST_RESULTS.md  CRASH_FIX_AND_TEST_PLAN.md  CRASH_FIX_SUMMARY.md  CREDENTIALS_STATUS.md  CRITICAL_MISSING_STEP.md  DATABASE_FIX_SUCCESS.md  DEALBOT_UPDATED.txt  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.sh  DUPLICATE_DETECTION_GUIDE.md  Dockerfile  FINAL_TEST_REPORT.md  FINAL_VERIFICATION.md  FIND_SCRAPULA_ENDPOINT.txt  FIXES_APPLIED.md  HOW_TO_ENABLE_PAAPI.md  ICON_FIX_SUMMARY.md  IMAGE_AND_DISCOUNT_FIX_REPORT.md  IMMEDIATE_ACTION.txt  LAUNCH_SUCCESS.md  LICENSE  MACOS_APP_GUIDE.md  Makefile  OVERRIDE_GUIDE.md  PAAPI_CONFIGURATION_CHECKLIST.md  PA_API_FIX_SUMMARY.md  PA_API_QUICK_SUMMARY.txt  PVP_DISCOUNT_SOLUTION.md  QUICKSTART.md  (+96 more)
adp/: app.py  controller.py  models.py
backend/: index.js  package.json
dealbot/: __init__.py  __main__.py  app.py  config.yaml  controller.py  daemon.py  http_server.py  models.py  scheduler.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
gdrive_sync_test/: 2025-10-15_1952_evening_whatsapp.txt  2025-10-15_1956_evening_whatsapp.txt  2025-10-15_2251_evening_whatsapp.txt  2025-10-15_2255_evening_whatsapp.txt  2025-10-15_2256_morning_whatsapp.txt  2025-10-15_2308_evening_whatsapp.txt  2025-10-15_2319_evening_whatsapp.txt  2025-10-16_0400_morning_whatsapp.txt  2025-10-16_1324_evening_whatsapp.txt  2025-10-16_1600_evening_whatsapp.txt  2025-10-16_1815_evening_whatsapp.txt  2025-10-16_1820_evening_whatsapp.txt  2025-10-16_1829_evening_whatsapp.txt  2025-10-16_2113_evening_whatsapp.txt  2025-10-17_0400_morning_whatsapp.txt  2025-10-17_1009_evening_whatsapp.txt  2025-10-17_1600_evening_whatsapp.txt  2025-10-18_0400_morning_whatsapp.txt  2025-10-19_1422_morning_whatsapp.txt  2025-10-19_1600_evening_whatsapp.txt  2025-10-19_1601_evening_whatsapp.txt  2025-10-20_0402_morning_whatsapp.txt  2025-10-20_0403_morning_whatsapp.txt  2025-10-20_1602_evening_whatsapp.txt  2025-10-21_0402_morning_whatsapp.txt  2025-10-21_1603_evening_whatsapp.txt  2025-10-22_0403_morning_whatsapp.txt  2025-10-22_0404_morning_whatsapp.txt  2025-10-22_1603_evening_whatsapp.txt  2025-10-22_1604_evening_whatsapp.txt  2025-10-23_0402_morning_whatsapp.txt  2025-10-23_0403_morning_whatsapp.txt  2025-10-23_1602_evening_whatsapp.txt  2025-10-23_1603_evening_whatsapp.txt  2025-10-24_0403_morning_whatsapp.txt  (+74 more)
(+41 files in other folders)
